--- a/recursion/day 5/readme
+++ b/recursion/day 5/readme
@@ -3,3 +3,8 @@ https://practice.geeksforgeeks.org/problems/rat-in-a-maze-problem/1
 
 NQueens
 https://leetcode.com/problems/n-queens/
+
+Bonus Question:
+
+Word Search
+https://leetcode.com/problems/word-search/
