--- a/binaryTrees/day 1/readme
+++ b/binaryTrees/day 1/readme
@@ -7,4 +7,6 @@ https://leetcode.com/problems/binary-tree-inorder-traversal/
 PostOrder Traversal
 https://leetcode.com/problems/binary-tree-postorder-traversal/
 
+Do it recursively as well as iteratively
+
 Morris PreOrder, InOrder
