update: readme, day3 3q done 2 rem

--- a/O4DynamicProgramming/day3/readme
+++ b/O4DynamicProgramming/day3/readme
@@ -4,11 +4,13 @@ https://leetcode.com/problems/minimum-falling-path-sum/
 Chocolates Pickup
 https://practice.geeksforgeeks.org/problems/chocolates-pickup/1
 
+KnapSack Pattern problems:
+
 Subset Sum Problem
 https://practice.geeksforgeeks.org/problems/subset-sum-problem-1611555638/1
 
 Partition Equal Subset Sum
 https://leetcode.com/problems/partition-equal-subset-sum/
 
-Subarray Sum Equals K
-https://leetcode.com/problems/subarray-sum-equals-k/
+Perfect Sum Problem
+https://practice.geeksforgeeks.org/problems/perfect-sum-problem5633/1
