--- a/O4DynamicProgramming/day4/readme
+++ b/O4DynamicProgramming/day4/readme
@@ -4,11 +4,11 @@ https://practice.geeksforgeeks.org/problems/partitions-with-given-difference/1
 0 - 1 Knapsack Problem
 https://practice.geeksforgeeks.org/problems/0-1-knapsack-problem0945/1
 
-Coin Change
+Coin Change (Unbounded Knapsack)
 https://leetcode.com/problems/coin-change/
 
 Target Sum
 https://leetcode.com/problems/target-sum/
 
-Coin Change II
+Coin Change II (Unbounded Knapsack)
 https://leetcode.com/problems/coin-change-ii/
