--- a/O4DynamicProgramming/day5/readme
+++ b/O4DynamicProgramming/day5/readme
@@ -11,8 +11,8 @@ LCS problems
 Longest Common Subsequence
 https://leetcode.com/problems/longest-common-subsequence/
 
-Print all LCS sequences
-https://practice.geeksforgeeks.org/problems/print-all-lcs-sequences3413/1
+Print LCS sequence
+https://www.codingninjas.com/studio/problems/print-longest-common-subsequence_8416383
 
 Longest Common Substring
 https://practice.geeksforgeeks.org/problems/longest-common-substring1452/1
