updated que's day7

--- a/O4DynamicProgramming/day7/readme
+++ b/O4DynamicProgramming/day7/readme
@@ -1,13 +1,11 @@
-Distinct Subsequences
-https://leetcode.com/problems/distinct-subsequences/
+Longest Repeating Subsequence
+https://practice.geeksforgeeks.org/problems/longest-repeating-subsequence2004/1
 
-Edit Distance
-https://leetcode.com/problems/edit-distance/
+Is Subsequence
+https://leetcode.com/problems/is-subsequence/
 
-Wildcard Matching
-https://leetcode.com/problems/wildcard-matching/
+Matrix Chain Multiplication
+https://practice.geeksforgeeks.org/problems/matrix-chain-multiplication0303/1
 
-DP on Stocks
-
-Best Time to Buy and Sell Stock
-https://leetcode.com/problems/best-time-to-buy-and-sell-stock/
+Palindrome Partitioning
+https://leetcode.com/problems/palindrome-partitioning/
