--- a/O4DynamicProgramming/day7/readme
+++ b/O4DynamicProgramming/day7/readme
@@ -7,5 +7,5 @@ https://leetcode.com/problems/is-subsequence/
 Matrix Chain Multiplication
 https://practice.geeksforgeeks.org/problems/matrix-chain-multiplication0303/1
 
-Palindrome Partitioning
-https://leetcode.com/problems/palindrome-partitioning/
+Palindrome Partitioning 2
+https://leetcode.com/problems/palindrome-partitioning-ii/
