--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -8,3 +8,6 @@ https://www.codingninjas.com/studio/problems/lower-bound_8165382?leftPanelTab=0
 
 P3. Implement Upper Bound
 https://www.codingninjas.com/studio/problems/implement-upper-bound_8165383?leftPanelTab=0
+
+P4. Search Insert Position
+https://leetcode.com/problems/search-insert-position/
