--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -11,3 +11,6 @@ https://www.codingninjas.com/studio/problems/implement-upper-bound_8165383?leftP
 
 P4. Search Insert Position
 https://leetcode.com/problems/search-insert-position/
+
+P5. Find First and Last Position of Element in Sorted Array
+https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/
