--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -14,3 +14,6 @@ https://leetcode.com/problems/search-insert-position/
 
 P5. Find First and Last Position of Element in Sorted Array
 https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/
+
+P6. Number of occurrence
+https://www.codingninjas.com/studio/problems/occurrence-of-x-in-a-sorted-array_630456?leftPanelTab=0
