--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -17,3 +17,6 @@ https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-
 
 P6. Number of occurrence
 https://www.codingninjas.com/studio/problems/occurrence-of-x-in-a-sorted-array_630456?leftPanelTab=0
+
+P7. Search in Rotated Sorted Array
+https://leetcode.com/problems/search-in-rotated-sorted-array/
