--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -20,3 +20,6 @@ https://www.codingninjas.com/studio/problems/occurrence-of-x-in-a-sorted-array_6
 
 P7. Search in Rotated Sorted Array
 https://leetcode.com/problems/search-in-rotated-sorted-array/
+
+P8. Search in Rotated Sorted Array II
+https://leetcode.com/problems/search-in-rotated-sorted-array-ii/
