--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -23,3 +23,6 @@ https://leetcode.com/problems/search-in-rotated-sorted-array/
 
 P8. Search in Rotated Sorted Array II
 https://leetcode.com/problems/search-in-rotated-sorted-array-ii/
+
+P9. Find Minimum in Rotated Sorted Array
+https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/
