--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -26,3 +26,6 @@ https://leetcode.com/problems/search-in-rotated-sorted-array-ii/
 
 P9. Find Minimum in Rotated Sorted Array
 https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/
+
+P10. Find out how many times has an array been rotated
+https://www.codingninjas.com/studio/problems/rotation_7449070?leftPanelTab=1
