--- a/O5BinarySearch/day1/readme
+++ b/O5BinarySearch/day1/readme
@@ -29,3 +29,6 @@ https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/
 
 P10. Find out how many times has an array been rotated
 https://www.codingninjas.com/studio/problems/rotation_7449070?leftPanelTab=1
+
+P11. Single Element in a Sorted Array
+https://leetcode.com/problems/single-element-in-a-sorted-array/
