--- a/O5BinarySearch/day2/readme
+++ b/O5BinarySearch/day2/readme
@@ -1,2 +1,8 @@
 P1. Finding Sqrt of a number using Binary Search
 https://www.codingninjas.com/studio/problems/square-root-integral_893351?leftPanelTab=0%3Futm_source%3Dstriver
+
+P2. Nth Root of a Number using Binary Search
+https://www.codingninjas.com/studio/problems/nth-root-of-m_1062679?leftPanelTab=0
+
+P3. Koko Eating Bananas
+https://leetcode.com/problems/koko-eating-bananas/
