--- a/O5BinarySearch/day2/readme
+++ b/O5BinarySearch/day2/readme
@@ -7,4 +7,5 @@ https://www.codingninjas.com/studio/problems/nth-root-of-m_1062679?leftPanelTab=
 P3. Koko Eating Bananas
 https://leetcode.com/problems/koko-eating-bananas/
 
-P4. 
+P4. Minimum Number of Days to Make m Bouquets
+https://leetcode.com/problems/minimum-number-of-days-to-make-m-bouquets/
