--- a/O5BinarySearch/day2/readme
+++ b/O5BinarySearch/day2/readme
@@ -9,3 +9,6 @@ https://leetcode.com/problems/koko-eating-bananas/
 
 P4. Minimum Number of Days to Make m Bouquets
 https://leetcode.com/problems/minimum-number-of-days-to-make-m-bouquets/
+
+P5. Find the Smallest Divisor Given a Threshold
+https://leetcode.com/problems/find-the-smallest-divisor-given-a-threshold/
