--- a/O6Graph/day2/readme
+++ b/O6Graph/day2/readme
@@ -6,3 +6,5 @@ https://www.codingninjas.com/studio/problems/topological-sorting_973003
 P2. Cycle Detection in DAG (using bfs or Kahns Algo) imp :)
 https://practice.geeksforgeeks.org/problems/detect-cycle-in-a-directed-graph/1
 
+P3. Course Schedule
+https://leetcode.com/problems/course-schedule/
