--- a/O6Graph/day2/readme
+++ b/O6Graph/day2/readme
@@ -8,3 +8,6 @@ https://practice.geeksforgeeks.org/problems/detect-cycle-in-a-directed-graph/1
 
 P3. Course Schedule
 https://leetcode.com/problems/course-schedule/
+
+P4. Course Schedule II
+https://leetcode.com/problems/course-schedule-ii/
