--- a/O6Graph/day2/readme
+++ b/O6Graph/day2/readme
@@ -11,3 +11,6 @@ https://leetcode.com/problems/course-schedule/
 
 P4. Course Schedule II
 https://leetcode.com/problems/course-schedule-ii/
+
+P5. Find Eventual Safe States
+https://leetcode.com/problems/find-eventual-safe-states/
