--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -3,3 +3,8 @@ Shortest Path Algorithms and Problems
 P1. Shortest path in Undirected Graph having unit distance
 https://practice.geeksforgeeks.org/problems/shortest-path-in-undirected-graph-having-unit-distance/1
 
+P2. Shortest path in Directed Acyclic Graph
+https://practice.geeksforgeeks.org/problems/shortest-path-in-undirected-graph/1
+
+
+
