--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -6,5 +6,6 @@ https://practice.geeksforgeeks.org/problems/shortest-path-in-undirected-graph-ha
 P2. Shortest path in Directed Acyclic Graph
 https://practice.geeksforgeeks.org/problems/shortest-path-in-undirected-graph/1
 
-
+P3. Implementing Dijkstra Algorithm
+https://practice.geeksforgeeks.org/problems/implementing-dijkstra-set-1-adjacency-matrix/1
 
