--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -12,3 +12,8 @@ https://practice.geeksforgeeks.org/problems/implementing-dijkstra-set-1-adjacenc
 P4. Shortest Distance in a Binary Maze
 https://practice.geeksforgeeks.org/problems/shortest-path-in-a-binary-maze-1655453161/1
 
+P5. Path With Minimum Effort
+https://leetcode.com/problems/path-with-minimum-effort/
+
+
+
