--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -15,5 +15,8 @@ https://practice.geeksforgeeks.org/problems/shortest-path-in-a-binary-maze-16554
 P5. Path With Minimum Effort
 https://leetcode.com/problems/path-with-minimum-effort/
 
+P6. Cheapest Flights Within K Stops
+https://leetcode.com/problems/cheapest-flights-within-k-stops/
+
 
 
