--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -18,5 +18,8 @@ https://leetcode.com/problems/path-with-minimum-effort/
 P6. Cheapest Flights Within K Stops
 https://leetcode.com/problems/cheapest-flights-within-k-stops/
 
+P7. Network Delay Time
+https://leetcode.com/problems/network-delay-time/
+
 
 
