--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -21,5 +21,8 @@ https://leetcode.com/problems/cheapest-flights-within-k-stops/
 P7. Network Delay Time
 https://leetcode.com/problems/network-delay-time/
 
+P8. Number of Ways to Arrive at Destination
+https://leetcode.com/problems/number-of-ways-to-arrive-at-destination/
+
 
 
