--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -24,5 +24,8 @@ https://leetcode.com/problems/network-delay-time/
 P8. Number of Ways to Arrive at Destination
 https://leetcode.com/problems/number-of-ways-to-arrive-at-destination/
 
+P9. Bellman Ford Algorithm
+https://practice.geeksforgeeks.org/problems/distance-from-the-source-bellman-ford-algorithm/1
+
 
 
