--- a/O6Graph/day3/readme
+++ b/O6Graph/day3/readme
@@ -27,7 +27,7 @@ https://leetcode.com/problems/number-of-ways-to-arrive-at-destination/
 P9. Bellman Ford Algorithm
 https://practice.geeksforgeeks.org/problems/distance-from-the-source-bellman-ford-algorithm/1
 
-P10. Floyd Warshall Algorithm
+P10. Find the City With the Smallest Number of Neighbors at a Threshold Distance (Floyd Warshall Algorithm)
 https://leetcode.com/problems/find-the-city-with-the-smallest-number-of-neighbors-at-a-threshold-distance/
 
 
