--- a/O6Graph/day4/readme
+++ b/O6Graph/day4/readme
@@ -1,3 +1,6 @@
 MinimumSpanningTree/Disjoint Set and Problems
 
 P1. Minimum Spanning Tree (Prims Algo)
+https://practice.geeksforgeeks.org/problems/minimum-spanning-tree/1
+
+P2. Disjoint Set
