P4 done with brute, prefix sum and Kedane's algo

--- a/O7Arrays/day2/readme
+++ b/O7Arrays/day2/readme
@@ -4,7 +4,7 @@ https://leetcode.com/problems/two-sum/
 P2. Sort Colors
 https://leetcode.com/problems/sort-colors/
 
-P3. Majority Element
+P3. Majority Element (Moore Majority Voting Algorithm)
 https://leetcode.com/problems/majority-element/
 
 P4. Maximum Subarray (Kedane Algorithm)
