--- a/O7Arrays/day3/readme
+++ b/O7Arrays/day3/readme
@@ -1,5 +1,8 @@
-P1. Pascal's Triangle
+P1. Pascal's Triangle (Print whole triangle)
 https://leetcode.com/problems/pascals-triangle/
+
+P1.2. Pascal's Triangle II (Print an entire row)
+https://leetcode.com/problems/pascals-triangle-ii/
 
 P2. Majority Element II
 https://leetcode.com/problems/majority-element-ii/
