--- a/O7Arrays/day3/readme
+++ b/O7Arrays/day3/readme
@@ -4,7 +4,7 @@ https://leetcode.com/problems/pascals-triangle/
 P1.2. Pascal's Triangle II (Print an entire row)
 https://leetcode.com/problems/pascals-triangle-ii/
 
-P2. Majority Element II
+P2. Majority Element II (Booyer Moore Majority vote algorithm)
 https://leetcode.com/problems/majority-element-ii/
 
 P3. 3Sum
